# CS354r-Whirlybirds

./: .gitignore  Assignment4.cpp  Assignment4.h  Ball.cpp  Ball.h  BaseApplication.cpp  Box.cpp  Building.cpp  Building.h  Client.h  ClientToServer.h  GUI.cpp  GUI.h  Game.h  GameObject.cpp  GameObject.h  Heli.cpp  Heli.h  HeliChass.cpp  HeliChass.h  HeliProp.cpp  HeliProp.h  Level.cpp  Level.h  LevelInfo.txt  Makefile  Makefile.am  Makefile.in  README.md  README.txt  Rocket.cpp  Rocket.h  Server.cpp  Server.h  ServerToClient.h  Simulator.cpp  Simulator.h  SoundSystem.cpp  SoundSystem.h  Surface.cpp  (+10 more)
.deps/: whirlybirds-Ball.Po  whirlybirds-BaseApplication.Po  whirlybirds-Box.Po  whirlybirds-Building.Po  whirlybirds-GUI.Po  whirlybirds-GameObject.Po  whirlybirds-Heli.Po  whirlybirds-HeliChass.Po  whirlybirds-HeliProp.Po  whirlybirds-Level.Po  whirlybirds-OgreMotionState.Po  whirlybirds-Rocket.Po  whirlybirds-Server.Po  whirlybirds-Simulator.Po  whirlybirds-SoundSystem.Po  whirlybirds-Surface.Po  whirlybirds-Target.Po  whirlybirds-UDPNetEnt.Po  whirlybirds-Wall.Po  whirlybirds-Whirlybirds.Po
autom4te.cache/: output.0  output.1  traces.0
media/materials/scripts/: Game.material  Game.particle
media/models/: heliprop.mesh
